More mixin cleanup.